<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物流生意宝</string>
    <string name="app_subtitle">覆盖全国的智能找货/找车软件</string>
    <string name="copyright">©博为科技公司版权所有</string>
    <string name="enter_now">立即体验</string>
    
    <string name="invite_msg">向你们推荐物流生意宝，一款覆盖全国的智能找货找车手机软件敬请本人手机号码做为推荐人电话。http://t.cn/RZwVFAq</string>

    <string name="lastest_version">当前已经是最新版本！</string>
    
    <string name="home_tab_home">首页</string>
    <string name="home_tab_activity">活动</string>
    <string name="home_tab_find">找货</string>
    <string name="home_tab_order">订单</string>
    <string name="home_tab_more">更多</string>
    
    <string name="confirm">确 定</string>
    <string name="close">关闭</string>
    <string name="detail">详情</string>
    <string name="upgrade">升级</string>
    <string name="exit">退出</string>
    <string name="unknown">不详</string>
    <string name="negotiable">面议</string>
    <string name="change">修改</string>
    
    <string name="quit_next_time">再按一次退出</string>

    <string name="title_home">@string/app_name</string>
    <string name="title_register1">注册（1/2）</string>
    <string name="title_register2">注册（2/2）</string>
    <string name="title_change_profile1">修改资料（1/2）</string>
    <string name="title_change_profile2">修改资料（2/2）</string>
    <string name="title_choose_city">选择城市</string>
    <string name="title_find_result">结果列表</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_profile">个人中心</string>
    <string name="title_rule">平台服务使用规则</string>
    
  	<string name="driver_guide">承运指南</string>
  	<string name="invite_firend">邀请好友</string>
  	<string name="share_firend">分享给好友</string>
  	<string name="suggestion">反馈与建议</string>
  	<string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="check_update">检查更新</string>
    <string name="logout">退出登录</string>
    
    <string name="hint_old_password">旧密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_repeat_password">重复新密码</string>
    <string name="old_password_empty">旧密码为空</string>
    <string name="new_password_empty">新密码为空</string>
    <string name="repeat_password_empty">重复新密码为空</string>
    <string name="old_password_invalid">旧密码格式错误</string>
    <string name="new_password_invalid">新密码格式错误</string>
    <string name="repeat_password_invalid">重复新密码格式错误</string>
    <string name="new_password_same">新密码与旧密码相同</string>
    <string name="repeat_diff_new">新密码两次输入不一致</string>
    
    <string name="agree_and_accept">同意并接受</string>
    <string name="platform_rule">《平台服务使用规则》</string>
    <string name="accept_rules">请同意并接受《平台服务使用规则》</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="prompt">提示</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="change_passwd">修改密码</string>
    <string name="push_switch">推送开关</string>
    
    <string name="choose_image">选择照片</string>
    
    <string name="myloc">我在 %1$s 附近</string>
    
    <string name="format_ton">%1$d吨</string>
    <string name="format_yuan">%1$d元</string>
    
    <string name="format_phone">电话：%1$s</string>
    <string name="format_truck_no">车牌号：%1$s</string>
    <string name="format_truck_type">车辆类型：%1$s</string>
    
    <string name="requesting">正在请求，请等待…</string>
    <string name="request_failed">请求失败，请重试</string>
    
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_input_invalid">用户名或者密码中包含非法字符或长度不符合要求，请重新输入</string>
    <string name="login_input_empty">用户名或者密码为空</string>
    <string name="login_input_username_empty">用户名为空</string>
    <string name="login_input_password_empty">密码为空</string>
    <string name="phone_invalid">手机号码格式错误</string>
    <string name="password_invalid">密码格式错误，（6-16）位字母、数字、下划线</string>
    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    
    <string name="get_verify_code">获取验证码</string>
    <string name="vertify_code_countdown">(%1$d秒后重发)</string>
    <string name="vertify_code">验证码</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="password_again">再次输入密码</string>
    <string name="name">姓名</string>
    <string name="company">所属企业</string>
    <string name="id_number">身份证号码</string>
    <string name="truck_no">车牌号</string>
    <string name="truck_load">载重吨位</string>
    <string name="recommend_no">推荐人电话</string>
    <string name="remark">个人说明</string>
    <string name="common_route">常用路线</string>
    
    <string name="all">全部</string>
    <string name="free_yes">免费公开</string>
    <string name="free_no">付费公开</string>
    
    <string name="phone_empty">手机号为空</string>
    <string name="vertify_code_empty">验证码为空</string>
    <string name="password_empty">密码为空</string>
    <string name="password_not_same">两次输入密码不同</string>
    <string name="name_empty">姓名为空</string>
    <string name="company_empty">所属企业为空</string>
    <string name="id_number_empty">身份证号码为空</string>
    <string name="truck_number_empty">车牌号为空</string>
    <string name="truck_load_empty">载重吨位为空</string>
    <string name="vertify_code_invalid">验证码格式错误</string>
    <string name="id_number_invalid">身份证号码格式错误</string>
    <string name="truck_load_invalid">载重吨位格式错误</string>
    <string name="choose_truck_type">请选择车辆类型</string>
    <string name="choose_city">请选择所在城市</string>
    <string name="choose_register_image">请将您的驾驶证与行驶证对齐放置并拍照上传！</string>

    <string name="upload_id_image_fail">身份证上传失败</string>
    
    <string name="choose_start">请选择起点</string>
    <string name="choose_end">请选择终点</string>
    <string name="must_have_one_address">至少有一个地址不为空</string>
    
    <string name="submit">提交</string>
    <string name="no_result">无内容</string>
    <string name="content_empty">内容不能为空</string>
    
    <string name="rob_order">抢单</string>
    <string name="drop_order">退单</string>
    
    <string name="star_good">非常好</string>
    <string name="star_normal">一般</string>
    <string name="star_bad">差</string>
    
    <string name="order_drop_message">确认要退单吗，请先协商后再点击确定</string>
    <string name="order_rob_message">您是否确认抢该订单，抢单成功后请及时与发货人进行联系！</string>
    
    <string name="label_order_code">订单编号：</string>
    <string name="label_order_state">信息状态：</string>
    <string name="label_create_time">订单创建时间：</string>
    <string name="label_pick_time">取货时间：</string>
    <string name="label_order_type">订单类型：</string>
    <string name="label_goods_name">物品名称：</string>
    <string name="label_goods_type">物品类型：</string>
    <string name="label_goods_value">物品价值：</string>
    <string name="label_goods_weight">物品重量：</string>
    <string name="label_truck_type">车辆类型：</string>
    <string name="label_need_truck">需要车型：</string>
    <string name="label_goods_pay">愿出运费：</string>
    <string name="label_goods_valid_time">有效时间：</string>
    <string name="label_message_phone">信息发送人电话：</string>
    <string name="label_message_type">信息发送人类型：</string>
    <string name="label_from_name">发货人：</string>
    <string name="label_to_name">收货人：</string>
    <string name="label_from_phone">发货人电话：</string>
    <string name="label_to_phone">收货人电话：</string>
    <string name="label_from_address">发货地址：</string>
    <string name="label_to_address">收货地址：</string>
    <string name="label_send_comment">重要说明：</string>
    <string name="label_message_free">信息公开：</string>
    
    <string name="label_user_name">用户姓名：</string>
    <string name="label_user_level">用户等级：</string>
    <string name="label_user_state">用户状态：</string>
    <string name="label_phone_no">手机号码：</string>
    <string name="label_id_no">身份证号码：</string>
    <string name="label_user_type">用户类型：</string>
    <string name="label_user_company">所属公司：</string>
    <string name="label_area_code">所属城市：</string>
    <string name="label_truck_no">车牌号：</string>
    <string name="label_truck_load">载重吨位：</string>
    
    <string name="label_creater_type">信息发送人类型：</string>
    <string name="label_creater_phone">信息发送人电话：</string>
    <string name="label_divider_line">分隔行：</string>
    
    <string name="order_realtime">实时单</string>
    <string name="order_bespeak">预约单</string>
    
</resources>
