<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp" />
    
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/btn_tab_n"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/home_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_tab_home"
                style="@style/home_tab"
                android:checked="true"
                android:drawableTop="@drawable/ic_tab_home"
                android:text="@string/home_tab_home" />

            <RadioButton
                android:id="@+id/home_tab_activity"
                style="@style/home_tab"
                android:drawableTop="@drawable/ic_tab_activity"
                android:text="@string/home_tab_activity" />

            <RadioButton
                android:id="@+id/home_tab_find"
                style="@style/home_tab"
                android:drawableTop="@drawable/ic_tab_find"
                android:text="@string/home_tab_find" />

            <RadioButton
                android:id="@+id/home_tab_order"
                style="@style/home_tab"
                android:drawableTop="@drawable/ic_tab_order"
                android:text="@string/home_tab_order" />

            <RadioButton
                android:id="@+id/home_tab_more"
                style="@style/home_tab"
                android:drawableTop="@drawable/ic_tab_more"
                android:text="@string/home_tab_more" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>