<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_back"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_marginLeft"
        android:layout_marginRight="@dimen/default_marginRight"
        android:layout_marginTop="@dimen/default_marginTop"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <cn.boweikeji.wuliu.view.ClearEditText
            android:id="@+id/phone"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/bg_item"
            android:drawableLeft="@drawable/ic_mark_phone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp" >

            <cn.boweikeji.wuliu.view.ClearEditText
                android:id="@+id/code"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/bg_item"
                android:drawableLeft="@drawable/ic_mark_sms"
                android:hint="@string/vertify_code"
                android:inputType="number"
                android:maxLength="4" />

            <LinearLayout
                android:id="@+id/get_code"
                android:layout_width="140dp"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/btn_vertify"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    style="@style/TextAppearance.Small.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/get_verify_code" />

                <TextView
                    android:id="@+id/countdown"
                    style="@style/TextAppearance.Micro.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/vertify_code_countdown"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/bg_item"
            android:orientation="vertical" >

            <cn.boweikeji.wuliu.view.ClearEditText
                android:id="@+id/password1"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:drawableLeft="@drawable/ic_mark_pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_d6dae0" />

            <cn.boweikeji.wuliu.view.ClearEditText
                android:id="@+id/password2"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:drawableLeft="@drawable/ic_mark_pass"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:maxLength="16" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            style="@style/TextAppearance.Big.White"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_default_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_default"
            android:text="@string/change_passwd" />
    </LinearLayout>

</LinearLayout>