<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_marginLeft"
        android:layout_marginRight="@dimen/default_marginRight"
        android:layout_marginTop="@dimen/default_marginTop"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btn_exchange"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@drawable/btn_exchange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/start"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_default_height"
                    android:drawableLeft="@drawable/icon_start"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_start" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/line_light" />

                <TextView
                    android:id="@+id/end"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_default_height"
                    android:drawableLeft="@drawable/icon_end"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_end" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#eeeeee"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_default_height"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/label_truck_type" />

                <TextView
                    android:id="@+id/truck_type"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center"
                    android:text="@string/choose_truck_type" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_default_height"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/label_goods_type" />

                <TextView
                    android:id="@+id/goods_type"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_light" />

            <RadioGroup
                android:id="@+id/message_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/message_free_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="@color/text_color_dark_gray" />

                <RadioButton
                    android:id="@+id/message_free_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_yes"
                    android:textColor="@color/text_color_dark_gray" />

                <RadioButton
                    android:id="@+id/message_free_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_no"
                    android:textColor="@color/text_color_dark_gray" />
            </RadioGroup>
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_find"
            style="@style/TextAppearance.Big.White"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_default_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_default"
            android:text="@string/home_tab_find" />
    </LinearLayout>

</LinearLayout>