<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_marginLeft"
            android:layout_marginRight="@dimen/default_marginRight"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_marginBottom"
            android:paddingTop="@dimen/default_marginTop" >

            <cn.boweikeji.wuliu.driver.view.ClearEditText
                android:id="@+id/register_phone"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="11" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <Button
                    android:id="@+id/register_get_code"
                    style="@style/TextAppearance.Middle.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="3dp"
                    android:background="@drawable/btn_vertify"
                    android:enabled="false"
                    android:text="@string/get_verify_code" />

                <cn.boweikeji.wuliu.driver.view.ClearEditText
                    android:id="@+id/register_code"
                    style="@style/ClearEditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/register_get_code"
                    android:hint="@string/vertify_code"
                    android:inputType="number"
                    android:maxLength="4" />
            </RelativeLayout>

            <cn.boweikeji.wuliu.driver.view.ClearEditText
                android:id="@+id/register_password"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16" />

            <cn.boweikeji.wuliu.driver.view.ClearEditText
                android:id="@+id/register_name"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:maxLength="8" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_holo_light"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_driver_type" />

                <TextView
                    android:id="@+id/register_driver_type"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center" />
            </LinearLayout>

            <cn.boweikeji.wuliu.driver.view.ClearEditText
                android:id="@+id/register_company"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/company"
                android:maxLength="20" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_holo_light"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_area_code" />

                <TextView
                    android:id="@+id/register_area_code"
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/arrow_right"
                    android:gravity="center"
                    android:text="@string/choose_city" />
            </LinearLayout>

            <cn.boweikeji.wuliu.driver.view.ClearEditText
                android:id="@+id/register_id"
                style="@style/ClearEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/id_number"
                android:maxLength="18" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/TextAppearance.Middle.LightGray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="12dp"
                    android:text="@string/label_id_front" />

                <ImageView
                    android:id="@+id/register_id_front"
                    android:layout_width="@dimen/id_image_width"
                    android:layout_height="@dimen/id_image_height"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/id_img1" />
            </LinearLayout>

            <Button
                android:id="@+id/next_step"
                style="@style/TextAppearance.Big.White"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_default_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_default"
                android:text="@string/next_step" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>